sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/antlr/AntDSLParser.java
// $ANTLR 3.4 /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g 2012-05-28 23:52:12

package org.apache.ant.antdsl.antlr;

import org.apache.ant.antdsl.*;
import org.apache.ant.antdsl.AbstractAntDslProjectHelper.InnerElement;
import org.apache.ant.antdsl.IfTask.ConditionnalSequential;
import org.apache.tools.ant.*;
import org.apache.tools.ant.taskdefs.*;
import org.apache.tools.ant.taskdefs.condition.*;
import java.util.LinkedHashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class AntDSLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "DOC", "NAME", "PROPERTY", "STRING", "WS", "'('", "')'", "','", "':'", "'='", "'basedir'", "'default'", "'depends'", "'element'", "'else'", "'extension-point'", "'extensionOf'", "'if'", "'implicit'", "'macrodef'", "'name'", "'namespaces'", "'optional'", "'target'", "'text'", "'trimmed'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int COMMENT=4;
    public static final int DOC=5;
    public static final int NAME=6;
    public static final int PROPERTY=7;
    public static final int STRING=8;
    public static final int WS=9;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AntDSLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AntDSLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return AntDSLParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g"; }


        private Project project;

        private AntDslContext context;

        private AntDslAntlrProjectHelper projectHelper;

        public void setProject(Project project) {
            this.project = project;
        }

        public void setContext(AntDslContext context) {
            this.context = context;
        }

        public void setProjectHelper(AntDslAntlrProjectHelper projectHelper) {
            this.projectHelper = projectHelper;
        }

        private String readString(String s) {
            if (s == null) {
                return null;
            }
            return s.substring(1, s.length() - 1);
        }



    // $ANTLR start "project"
    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:46:1: project : ( ( 'name' ':' name= NAME )? ( 'default' ':' def= NAME )? ( 'basedir' ':' basedir= STRING )? ) ( 'namespaces' '{' (ns= namespace )* '}' )? (tl= taskLists )? ( target | extensionPoint | macrodef )* ;
    public final void project() throws RecognitionException {
        Token name=null;
        Token def=null;
        Token basedir=null;
        Pair<String, String> ns =null;

        List<Task> tl =null;


        try {
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:46:8: ( ( ( 'name' ':' name= NAME )? ( 'default' ':' def= NAME )? ( 'basedir' ':' basedir= STRING )? ) ( 'namespaces' '{' (ns= namespace )* '}' )? (tl= taskLists )? ( target | extensionPoint | macrodef )* )
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:47:5: ( ( 'name' ':' name= NAME )? ( 'default' ':' def= NAME )? ( 'basedir' ':' basedir= STRING )? ) ( 'namespaces' '{' (ns= namespace )* '}' )? (tl= taskLists )? ( target | extensionPoint | macrodef )*
            {
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:47:5: ( ( 'name' ':' name= NAME )? ( 'default' ':' def= NAME )? ( 'basedir' ':' basedir= STRING )? )
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:48:9: ( 'name' ':' name= NAME )? ( 'default' ':' def= NAME )? ( 'basedir' ':' basedir= STRING )?
            {
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:48:9: ( 'name' ':' name= NAME )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==25) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:48:10: 'name' ':' name= NAME
                    {
                    match(input,25,FOLLOW_25_in_project51); 

                    match(input,13,FOLLOW_13_in_project56); 

                    name=(Token)match(input,NAME,FOLLOW_NAME_in_project60); 

                    }
                    break;

            }


            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:49:9: ( 'default' ':' def= NAME )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==16) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:49:10: 'default' ':' def= NAME
                    {
                    match(input,16,FOLLOW_16_in_project73); 

                    match(input,13,FOLLOW_13_in_project75); 

                    def=(Token)match(input,NAME,FOLLOW_NAME_in_project79); 

                    }
                    break;

            }


            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:50:9: ( 'basedir' ':' basedir= STRING )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==15) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:50:10: 'basedir' ':' basedir= STRING
                    {
                    match(input,15,FOLLOW_15_in_project92); 

                    match(input,13,FOLLOW_13_in_project94); 

                    basedir=(Token)match(input,STRING,FOLLOW_STRING_in_project98); 

                    }
                    break;

            }


            }


             projectHelper.setupProject(project, context, (name!=null?name.getText():null), readString((basedir!=null?basedir.getText():null)), (def!=null?def.getText():null)); 

            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:53:5: ( 'namespaces' '{' (ns= namespace )* '}' )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==26) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:53:7: 'namespaces' '{' (ns= namespace )* '}'
                    {
                    match(input,26,FOLLOW_26_in_project120); 

                    match(input,31,FOLLOW_31_in_project122); 

                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:53:24: (ns= namespace )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==NAME) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:53:26: ns= namespace
                    	    {
                    	    pushFollow(FOLLOW_namespace_in_project128);
                    	    ns=namespace();

                    	    state._fsp--;


                    	     context.addNamespace(ns.first, ns.second); 

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    match(input,32,FOLLOW_32_in_project135); 

                    }
                    break;

            }


            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:54:7: (tl= taskLists )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==31) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:54:7: tl= taskLists
                    {
                    pushFollow(FOLLOW_taskLists_in_project145);
                    tl=taskLists();

                    state._fsp--;


                    }
                    break;

            }


             for (Task t : tl) { context.getImplicitTarget().addTask(t); } 

            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:56:5: ( target | extensionPoint | macrodef )*
            loop7:
            do {
                int alt7=4;
                switch ( input.LA(1) ) {
                case DOC:
                    {
                    int LA7_2 = input.LA(2);

                    if ( (LA7_2==28) ) {
                        alt7=1;
                    }
                    else if ( (LA7_2==20) ) {
                        alt7=2;
                    }


                    }
                    break;
                case 28:
                    {
                    alt7=1;
                    }
                    break;
                case 20:
                    {
                    alt7=2;
                    }
                    break;
                case 24:
                    {
                    alt7=3;
                    }
                    break;

                }

                switch (alt7) {
            	case 1 :
            	    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:56:9: target
            	    {
            	    pushFollow(FOLLOW_target_in_project162);
            	    target();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:57:9: extensionPoint
            	    {
            	    pushFollow(FOLLOW_extensionPoint_in_project172);
            	    extensionPoint();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:58:9: macrodef
            	    {
            	    pushFollow(FOLLOW_macrodef_in_project182);
            	    macrodef();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "project"



    // $ANTLR start "namespace"
    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:61:1: namespace returns [Pair<String, String> ns = new Pair<String, String>()] : NAME ':' STRING ;
    public final Pair<String, String> namespace() throws RecognitionException {
        Pair<String, String> ns =  new Pair<String, String>();


        Token NAME1=null;
        Token STRING2=null;

        try {
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:61:73: ( NAME ':' STRING )
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:62:5: NAME ':' STRING
            {
            NAME1=(Token)match(input,NAME,FOLLOW_NAME_in_namespace204); 

             ns.first = (NAME1!=null?NAME1.getText():null); 

            match(input,13,FOLLOW_13_in_namespace208); 

            STRING2=(Token)match(input,STRING,FOLLOW_STRING_in_namespace210); 

             ns.second = readString((STRING2!=null?STRING2.getText():null)); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ns;
    }
    // $ANTLR end "namespace"



    // $ANTLR start "extensionPoint"
    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:64:1: extensionPoint returns [Target t = new Target()] : (desc= DOC )? 'extension-point' n= NAME ( 'extensionOf' eo= targetList )? ( 'depends' d= targetList )? ;
    public final Target extensionPoint() throws RecognitionException {
        Target t =  new Target();


        Token desc=null;
        Token n=null;
        List<String> eo =null;

        List<String> d =null;


        try {
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:64:49: ( (desc= DOC )? 'extension-point' n= NAME ( 'extensionOf' eo= targetList )? ( 'depends' d= targetList )? )
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:65:5: (desc= DOC )? 'extension-point' n= NAME ( 'extensionOf' eo= targetList )? ( 'depends' d= targetList )?
            {
             context.setCurrentTarget(t); 

            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:66:9: (desc= DOC )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==DOC) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:66:9: desc= DOC
                    {
                    desc=(Token)match(input,DOC,FOLLOW_DOC_in_extensionPoint235); 

                    }
                    break;

            }


            match(input,20,FOLLOW_20_in_extensionPoint242); 

            n=(Token)match(input,NAME,FOLLOW_NAME_in_extensionPoint246); 

            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:68:5: ( 'extensionOf' eo= targetList )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==21) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:68:6: 'extensionOf' eo= targetList
                    {
                    match(input,21,FOLLOW_21_in_extensionPoint253); 

                    pushFollow(FOLLOW_targetList_in_extensionPoint257);
                    eo=targetList();

                    state._fsp--;


                    }
                    break;

            }


            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:69:5: ( 'depends' d= targetList )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==17) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:69:6: 'depends' d= targetList
                    {
                    match(input,17,FOLLOW_17_in_extensionPoint266); 

                    pushFollow(FOLLOW_targetList_in_extensionPoint270);
                    d=targetList();

                    state._fsp--;


                    }
                    break;

            }


             projectHelper.mapCommonTarget(t, project, context, (n!=null?n.getText():null), (desc!=null?desc.getText():null), d, eo); 

             context.setCurrentTarget(context.getImplicitTarget()); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return t;
    }
    // $ANTLR end "extensionPoint"



    // $ANTLR start "target"
    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:74:1: target returns [Target t = new Target()] : (desc= DOC )? 'target' n= NAME ( 'extensionOf' eo= targetList )? ( 'depends' d= targetList )? (tl= taskLists )? ;
    public final Target target() throws RecognitionException {
        Target t =  new Target();


        Token desc=null;
        Token n=null;
        List<String> eo =null;

        List<String> d =null;

        List<Task> tl =null;


        try {
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:74:41: ( (desc= DOC )? 'target' n= NAME ( 'extensionOf' eo= targetList )? ( 'depends' d= targetList )? (tl= taskLists )? )
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:75:5: (desc= DOC )? 'target' n= NAME ( 'extensionOf' eo= targetList )? ( 'depends' d= targetList )? (tl= taskLists )?
            {
             context.setCurrentTarget(t); 

            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:76:9: (desc= DOC )?
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==DOC) ) {
                alt11=1;
            }
            switch (alt11) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:76:9: desc= DOC
                    {
                    desc=(Token)match(input,DOC,FOLLOW_DOC_in_target312); 

                    }
                    break;

            }


            match(input,28,FOLLOW_28_in_target319); 

            n=(Token)match(input,NAME,FOLLOW_NAME_in_target323); 

            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:78:5: ( 'extensionOf' eo= targetList )?
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==21) ) {
                alt12=1;
            }
            switch (alt12) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:78:6: 'extensionOf' eo= targetList
                    {
                    match(input,21,FOLLOW_21_in_target330); 

                    pushFollow(FOLLOW_targetList_in_target334);
                    eo=targetList();

                    state._fsp--;


                    }
                    break;

            }


            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:79:5: ( 'depends' d= targetList )?
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==17) ) {
                alt13=1;
            }
            switch (alt13) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:79:6: 'depends' d= targetList
                    {
                    match(input,17,FOLLOW_17_in_target343); 

                    pushFollow(FOLLOW_targetList_in_target347);
                    d=targetList();

                    state._fsp--;


                    }
                    break;

            }


             projectHelper.mapCommonTarget(t, project, context, (n!=null?n.getText():null), (desc!=null?desc.getText():null), d, eo); 

            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:81:7: (tl= taskLists )?
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( (LA14_0==31) ) {
                alt14=1;
            }
            switch (alt14) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:81:7: tl= taskLists
                    {
                    pushFollow(FOLLOW_taskLists_in_target363);
                    tl=taskLists();

                    state._fsp--;


                    }
                    break;

            }


             for (Task task : tl) { t.addTask(task); } 

             context.setCurrentTarget(context.getImplicitTarget()); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return t;
    }
    // $ANTLR end "target"



    // $ANTLR start "taskLists"
    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:86:1: taskLists returns [List<Task> tl = new ArrayList<Task>()] : '{' (t= task )+ '}' ;
    public final List<Task> taskLists() throws RecognitionException {
        List<Task> tl =  new ArrayList<Task>();


        Task t =null;


        try {
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:86:58: ( '{' (t= task )+ '}' )
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:87:5: '{' (t= task )+ '}'
            {
            match(input,31,FOLLOW_31_in_taskLists396); 

            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:87:9: (t= task )+
            int cnt15=0;
            loop15:
            do {
                int alt15=2;
                int LA15_0 = input.LA(1);

                if ( (LA15_0==NAME||LA15_0==22) ) {
                    alt15=1;
                }


                switch (alt15) {
            	case 1 :
            	    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:87:10: t= task
            	    {
            	    pushFollow(FOLLOW_task_in_taskLists401);
            	    t=task();

            	    state._fsp--;


            	     tl.add(t); 

            	    }
            	    break;

            	default :
            	    if ( cnt15 >= 1 ) break loop15;
                        EarlyExitException eee =
                            new EarlyExitException(15, input);
                        throw eee;
                }
                cnt15++;
            } while (true);


            match(input,32,FOLLOW_32_in_taskLists408); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return tl;
    }
    // $ANTLR end "taskLists"



    // $ANTLR start "targetList"
    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:89:1: targetList returns [List<String> tl = new ArrayList<String>()] : n= NAME ( ',' n= NAME )* ;
    public final List<String> targetList() throws RecognitionException {
        List<String> tl =  new ArrayList<String>();


        Token n=null;

        try {
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:89:63: (n= NAME ( ',' n= NAME )* )
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:90:5: n= NAME ( ',' n= NAME )*
            {
            n=(Token)match(input,NAME,FOLLOW_NAME_in_targetList425); 

             tl.add((n!=null?n.getText():null)); 

            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:91:5: ( ',' n= NAME )*
            loop16:
            do {
                int alt16=2;
                int LA16_0 = input.LA(1);

                if ( (LA16_0==12) ) {
                    alt16=1;
                }


                switch (alt16) {
            	case 1 :
            	    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:91:6: ',' n= NAME
            	    {
            	    match(input,12,FOLLOW_12_in_targetList434); 

            	    n=(Token)match(input,NAME,FOLLOW_NAME_in_targetList438); 

            	     tl.add((n!=null?n.getText():null)); 

            	    }
            	    break;

            	default :
            	    break loop16;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return tl;
    }
    // $ANTLR end "targetList"



    // $ANTLR start "task"
    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:93:1: task returns [Task t = null] : (pa= propertyAssignment |ie= innerElement |b= branch );
    public final Task task() throws RecognitionException {
        Task t =  null;


        Property pa =null;

        InnerElement ie =null;

        IfTask b =null;


        try {
            // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:93:29: (pa= propertyAssignment |ie= innerElement |b= branch )
            int alt17=3;
            int LA17_0 = input.LA(1);

            if ( (LA17_0==NAME) ) {
                int LA17_1 = input.LA(2);

                if ( (LA17_1==14) ) {
                    alt17=1;
                }
                else if ( (LA17_1==10||LA17_1==13) ) {
                    alt17=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 17, 1, input);

                    throw nvae;

                }
            }
            else if ( (LA17_0==22) ) {
                alt17=3;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 17, 0, input);

                throw nvae;

            }
            switch (alt17) {
                case 1 :
                    // /Users/hibou/dev/ant/svn/sandbox/antdsl/org.apache.ant.antdsl/src/org/apache/ant/antdsl/AntDSL.g:94:7: pa= propertyAssignment
                    {
                    pushFollow(FOLLOW_propertyAssignment_in_task462);
                    pa=propertyAssignment();
